change the skill

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -7,7 +7,7 @@
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
             &nbsp;&nbsp;<em>Java(Android)</em>
-<p> reference <a href="https://play.google.com/store/apps/details?id=com.cast.dailyfactory.dailyyoga">DailyCast application</a> in google appstore </p>
+<p> reference <a href="https://play.google.com/store/apps/details?id=com.cast.dailyfactory.dailyyoga"><font color="red"><b>DailyCast application</b></font></a> in google appstore </p>
 </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></i><i class="fa fa-star-o"></i>
@@ -36,11 +36,11 @@ Deploy: zip file in server, jCenter, cocoaPod
 <p>
 Doc : javaDoc, Jazzy
 </p>
-<p>Owner of <a href="http://developer.samsung.com/tv/develop/extension-libraries/smart-view-sdk/introduction/">SmartViewSDK Developer Site</a>
+<p>Owner of <a href="http://developer.samsung.com/tv/develop/extension-libraries/smart-view-sdk/introduction/"><font color="red"><b>SmartViewSDK Developer Site</b></font></a>
 </p>
-<p>Owner of <a href="https://smartviewsdk.github.io/API-GUIDE/">SmartViewSDK API gitHub io</a>
+<p>Owner of <a href="https://smartviewsdk.github.io/API-GUIDE/"><font color="red"><b>SmartViewSDK API gitHub io</b></font></a>
 </p>
-<p>Member of <a href ="https://github.com/SamsungDForum">SmartViewSDK sampleApp GitHub</a>
+<p>Member of <a href ="https://github.com/SamsungDForum"><font color="red"><b>SmartViewSDK sampleApp GitHub</b></font></a>
 </p>
     </article>
 </section>
