add images for employment
add image for employment

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -6,10 +6,12 @@
             <span><address>Samsung Electronics</address><time>2006 to Present</time></span>
         </header>
 <ul>2006~2010  Develop feature phone with legacy framework.I developed camera app/gallery app, ListBox widget framework.</ul>
-<ul>2010~2014  Develop  GalexyS and Note series with android framework.I developed homescreen(launcher) and AppWidget framework and Edge widget(RSS daum new,sports and stock)</ul>
-<ul>2014~2015  Join a VD division and develop a named PX-Project that Tablet remote controller communicate with TV.</ul>
+<ul><p><img width="150" height="150" src="../static/img/f01.jpg"><img width="155" height="155" src="../static/img/f02.jpg"><img width="155" height="155" src="../static/img/f03.jpg"></p></ul>
+<ul>2010~2014  Develop  GalexyS and Note series with android framework.I developed homescreen(launcher) and AppWidget framework and Edge widget(RSS daum news,sports and stock)</ul>
+<ul><p><img width="255" height="255" src="../static/img/s01.jpg"><img width="155" height="155" src="../static/img/s02.jpg"><img width="155" height="155" src="../static/img/s03.jpg"></p></ul>
+<ul>2014~2015  "Join a VD division and develop a named PX-Project that Tablet remote controller communicate with TV.</ul>
 <ul>2016~2017  I lead a SmartViewSDK mobile library(Android,iOS,JS)</ul>
-
+<ul><p><img width="700" height="350" src="../static/img/sdk01.png"></p></ul>
 
 
 </section>
