--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -5,7 +5,7 @@
             <h1>Software engineering </h1>
         </header>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
             &nbsp;&nbsp;<em>Java(Android)</em>
 <p> reference <a href="https://play.google.com/store/apps/details?id=com.cast.dailyfactory.dailyyoga"><font color="red"><b>DailyCast application</b></font></a> in google appstore </p>
 </p>
