--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+<style>
+body {
+  background-color: black;
+  text-align: center;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+</style>
+</head>
+<body>
+
 <section class="thirteen columns">
     <h1>Programming Skills</h1>
     <article>
@@ -11,7 +26,11 @@
 </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>swift, Javascript, c++</em> &amp; <em></em>
+            &nbsp;&nbsp;<em>kotlin</em>
+        </p>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>swift, Javascript, c++</em> 
         </p>
 
 </p>
@@ -19,10 +38,7 @@
             <h1>ETC </h1>
         </header>
 <p>
-SmartViewSDK Library Leader(Android,iOS,JS)
-</p>
-<p>
-Other skills : git,gitHub,p4,html/css, Node, open API(like youtube API)
+Other skills : git,gitHub,p4,html/css, Node,
 <p>
 <p>
 IDE : Android Studio, xCode, tizen studio
@@ -36,11 +52,9 @@ Deploy: zip file in server, jCenter, cocoaPod
 <p>
 Doc : javaDoc, Jazzy
 </p>
-<p>Owner of <a href="http://developer.samsung.com/tv/develop/extension-libraries/smart-view-sdk/introduction/"><font color="red"><b>SmartViewSDK Developer Site</b></font></a>
-</p>
-<p>Owner of <a href="https://smartviewsdk.github.io/API-GUIDE/"><font color="red"><b>SmartViewSDK API gitHub io</b></font></a>
-</p>
-<p>Member of <a href ="https://github.com/SamsungDForum"><font color="red"><b>SmartViewSDK sampleApp GitHub</b></font></a>
-</p>
+
     </article>
 </section>
+
+</body>
+</html>
