--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -12,6 +12,6 @@
 <ul>2014~2015  "Join a VD division and develop a named PX-Project that Tablet remote controller communicate with TV.</ul>
 <ul>2016~2017  I lead a SmartViewSDK mobile library(Android,iOS,JS)</ul>
 <ul><p><img width="700" height="350" src="./static/img/sdk01.png"></p></ul>
-
+<ul>2018~  Member of IOT mobile client developer. Make TV plugin which works in SmartThings </ul>
 
 </section>
